--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Malla Curricular - Tecnología en Electrónica Industrial</h1>
 
-  <!-- Semestre 1 -->
+  <!-- 1 Semestre  -->
   <div class="semestre">
-    <h2>Semestre 1</h2>
+    <h2> 1 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s1_mat1"> Cálculo Diferencial</li>
       <li><input type="checkbox" id="s1_mat2"> Cátedra Francisco José de Caldas</li>
@@ -23,9 +23,9 @@
     </ul>
   </div>
 
-  <!-- Semestre 2 -->
+  <!-- 2 Semestre -->
   <div class="semestre">
-    <h2>Semestre 2</h2>
+    <h2> 2 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s2_mat1"> Producción y Comprensión de Textos II</li>
       <li><input type="checkbox" id="s2_mat2"> Ética y Sociedad</li>
@@ -37,9 +37,9 @@
     </ul>
   </div>
 
-  <!-- Semestre 3 -->
+  <!-- 3 Semestre -->
   <div class="semestre">
-    <h2>Semestre 3</h2>
+    <h2> 3 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s3_mat1"> Cátedra de Contexto</li>
       <li><input type="checkbox" id="s3_mat2"> Segunda Lengua I</li>
@@ -51,9 +51,9 @@
     </ul>
   </div>
 
-  <!-- Semestre 4 -->
+  <!-- 4 Semestre -->
   <div class="semestre">
-    <h2>Semestre 4</h2>
+    <h2> 4 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s4_mat1"> Segunda Lengua II</li>
       <li><input type="checkbox" id="s4_mat2"> Ecuaciones Diferenciales</li>
@@ -64,9 +64,9 @@
     </ul>
   </div>
 
-  <!-- Semestre 5 -->
+  <!-- 5 Semestre -->
   <div class="semestre">
-    <h2>Semestre 5</h2>
+    <h2> 5 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s5_mat1"> Segunda Lengua III</li>
       <li><input type="checkbox" id="s5_mat2"> Electiva Administrativa</li>
@@ -77,9 +77,9 @@
     </ul>
   </div>
 
-  <!-- Semestre 6 -->
+  <!-- 6 Semestre  -->
   <div class="semestre">
-    <h2>Semestre 6</h2>
+    <h2> 6 Semestre </h2>
     <ul>
       <li><input type="checkbox" id="s6_mat1"> Electiva Profesional II</li>
       <li><input type="checkbox" id="s6_mat2"> Electiva Profesional III</li>
