--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Curricular - Tecnología en Electrónica Industrial</title>
+  <title>Malla Curricular - Tecnología en Electrónica Industrial Carlos Enrique Solis Mina</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Curricular - Tecnología en Electrónica Industrial</h1>
+  <h1>Malla Curricular - Tecnología en Electrónica Industrial Carlos Enrique Solis Min</h1>
 
   <!-- 1 Semestre  -->
   <div class="semestre">
