--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Curricular - Tecnología en Electrónica Industrial Carlos Enrique Solis Min</h1>
+<h1>Malla Curricular - Tecnología en Electrónica Industrial <br><span style="font-weight: 400;">Carlos Enrique Solis Mina</span></h1>
+
 
   <!-- 1 Semestre  -->
   <div class="semestre">
