--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <label><input type="checkbox" /> Cálculo Integral</label>
         <label><input type="checkbox" /> Circuitos Eléctricos I</label>
         <label><input type="checkbox" /> Lenguaje de Programación</label>
-        <label><input type="checkbox" /> Electiva</label>
+        <label><input type="checkbox" /> Electiva I</label>
       </div>
 
       <div class="semestre">
@@ -81,5 +81,6 @@
   </div>
 
   <script src="script.js"></script>
+  <div id="mensaje-final" class="oculto">🎉 ¡LO LOGRASTE! 🎓<br>Terminaste toda la malla curricular.</div>
 </body>
 </html>
