--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Curricular - Tecnología en Electrónica Industrial Carlos Enrique Solis Mina</title>
+  <title>Malla Curricular - Tecnología en Electrónica Industrial</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Malla Curricular - Tecnología en Electrónica Industrial<br><span>Carlos Enrique Solis Mina</span></h1>
 
   <div class="contenedor">
-    <!-- Columna izquierda: Semestres 1 a 3 -->
     <div class="columna">
       <div class="semestre">
         <h2> 1 Semestre </h2>
@@ -32,7 +31,7 @@
         <label><input type="checkbox" /> Cálculo Integral</label>
         <label><input type="checkbox" /> Circuitos Eléctricos I</label>
         <label><input type="checkbox" /> Lenguaje de Programación</label>
-        <label><input type="checkbox" /> Electiva I</label>
+        <label><input type="checkbox" /> Electiva</label>
       </div>
 
       <div class="semestre">
@@ -47,7 +46,6 @@
       </div>
     </div>
 
-    <!-- Columna derecha: Semestres 4 a 6 -->
     <div class="columna">
       <div class="semestre">
         <h2> 4 Semestre </h2>
@@ -81,6 +79,5 @@
   </div>
 
   <script src="script.js"></script>
-  <div id="mensaje-final" class="oculto">🎉 ¡LO LOGRASTE! 🎓<br>Terminaste toda la malla curricular.</div>
 </body>
 </html>
